--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Caitlin Evans. It uses data from mapbox.com and darksky.net. How fun and cool is that?</p>
         <img class="portrait" src="/img/me.jpg">
     </div>
     
